# AMI

./: .editorconfig  .gitignore  AMI.py  AMI.spec  AMI_Dashboard.py  AMI_app.spec  BUILD_WINDOWS.md  BUILD_WINDOWS_QUICK.md  CHANGELOG.md  COME_CREARE_EXE.txt  COMPARISON.md  CONTRIBUTING.md  CROSS_PLATFORM_FEATURES.md  CYBERPUNK_DESIGN.md  DELIVERY.md  DESIGN_SHOWCASE.md  DESIGN_SYSTEM.md  DMG_BUILD_SUMMARY.md  GITHUB_RELEASE_NOTES.md  GITHUB_RELEASE_NOTES_v2.1.0.md  GITHUB_RELEASE_NOTES_v2.1.1.md  GITHUB_RELEASE_NOTES_v2.1.2.md  GITHUB_RELEASE_NOTES_v3.1.4.md  GRAFICA_MIGLIORATA.md  INSTALLER_GUIDE.md  LICENSE  MACOS_SECURITY.md  NOTICE  PROJECT_SUMMARY.md  PUBLISH_RELEASE_INSTRUCTIONS.md  PUBLISH_RELEASE_v2.1.0.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RIEPILOGO_FINALE.md  RISTRUTTURAZIONE_COMPLETATA.md  (+13 more)
3.0/: CHANGELOG.md  README.md  ami_macos.spec  build.py  config.json  config.schema.json  pyi_rth_pyqt6_macos.py  pyproject.toml  requirements.txt  run.py  run_local.sh
3.0/docs/: OTA_UPDATE_SYSTEM.md
3.0/resources/: ami.icns
3.0/scripts/: generate_ami_icns.sh
3.0/src/ami/: __init__.py  _macos_qt_env.py  main.py
3.0/src/ami/core/: __init__.py  config.py  models.py  paths.py
3.0/src/ami/services/: __init__.py  api_server.py  logger.py  network_monitor.py  notifier.py  speed_test.py  updater.py
3.0/src/ami/ui/: __init__.py  compact_status.py  dashboard.py  macos_status_item.py  settings_dialog.py  splash_screen.py  themes.py  tray_app.py  (+1 more)
(+40 files in other folders)
