[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami"
version = "3.1.0"
description = "Active Monitor of Internet - Real-time connectivity monitoring"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "CiaoIM™ by Daniel Giovannetti" }]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "ping3>=4.0.4",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "packaging>=23.2",
    "platformdirs>=4.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = ["pyinstaller", "pytest"]

[project.scripts]
ami = "ami.main:main"

[tool.setuptools.packages.find]
where = ["src"]
